--- a/tipkor/stamp/templates/stamp/c_stamp.html
+++ b/tipkor/stamp/templates/stamp/c_stamp.html
@@ -27,13 +27,13 @@
                 <form class="form-control-lg " action="{% url 'stamp:c_stamp' %}" method="post">
                     {% csrf_token %}
                     <div class="row">
-                        <div class="col">{{ form.new_or_no}}</div>
-                        <div class="col">{{ form.express }}<p>Срочно (+500 руб.)</p>
+                        <div class="col">{{ form.new_or_no }}</div>
+                        
+                        <div class="col form-check">{{ form.express }}   Срочно (+500 руб.)</p>
                         </div>
                     </div>
 
                     <div class="row pt-4">
-
                         <div class="col">{{ form.snap }}<p>Оснастка</p>
                         </div>
                     </div>
@@ -44,7 +44,6 @@
                             </div>
                             <button type="submit" class="calc_button btn btn-primary"
                                 name="{{ form.prefix }}">Расчет</button>
-                            <!-- <button href="{% url 'poly:card' %}" class="reset_button btn btn-danger" value="Сброс">Сброс</button> -->
                         </div>
                     </div>
                 </form>
@@ -54,7 +53,6 @@
                 картинка печать
             </div>
         </div>
-        <!-- Результат -->
     </div>
 </div>
 
@@ -74,15 +72,9 @@
                 <p>При заказе сегодня до 15:00</p>
             </div>
 
-            <!-- <div class="pt-4">
-                <a class="confirm_button btn btn-success" href="confirm/{{ result.id }}"> заказать</a>
-            </div> -->
-            <div class="more_info">
-                <h6>Нажмите "заказать", что бы отправить нам заказ.</h6>
-            </div>
-
             <div>
-                <form class="form-control-lg " action="{% url 'stamp:confirm' %}" method="post" enctype="multipart/form-data">
+                <form class="form-control-lg " action="{% url 'stamp:confirm' %}" method="post"
+                    enctype="multipart/form-data">
 
                     <div class="row border">
                         {% csrf_token %}
@@ -92,6 +84,8 @@
                         <div class="col border">{{ confirm_form.file }}<p>макет</p>
                         </div>
                     </div>
+
+
                     <div class="row">
                         <div class="col border">{{ confirm_form.name }}<p>Имя</p>
                         </div>tipkor@mail.ru
@@ -107,6 +101,9 @@
                 <div class="col border">
                     <button style="width: 200px;" type="submit" class="yes_button btn btn-primary"
                         name="{{ confirm_form.prefix }}">заказать</button>
+                    <div class="more_info">
+                        <h6>Нажмите "заказать", что бы отправить нам заказ.</h6>
+                    </div>
                     <!-- <button href="{% url 'poly:card' %}" class="reset_button btn btn-danger" value="Сброс">Сброс</button> -->
                 </div>
             </div>
