--- a/tipkor/stamp/templates/stamp/r_stamp.html
+++ b/tipkor/stamp/templates/stamp/r_stamp.html
@@ -27,34 +27,32 @@
                 <form class="form-control-lg " action="{% url 'stamp:r_stamp' %}" method="post">
                     {% csrf_token %}
                     <div class="row">
-                        <div class="col">{{ calc_form.express }}<p>Срочно (+500 руб.)</p>
-                        
+                        <div class="col">{{ form.new_or_no }}</div>
+
+                        <div class="col form-check">{{ form.express }} Срочно (+500 руб.)</p>
                         </div>
                     </div>
 
                     <div class="row pt-4">
-                        <div class="col">{{ calc_form.comment }}<p>ИНН (если есть)</p>
-                        </div>
-                        <div class="col">{{ calc_form.snap }}<p>Оснастка</p>
+                        <div class="col">{{ form.snap }}<p>Оснастка</p>
                         </div>
                     </div>
 
                     <div class="row">
                         <div class="col">
-                            <div class="col">{{ calc_form.count }}<p>Количество</p>
+                            <div class="col">{{ form.count }}<p>Количество</p>
                             </div>
-                            <button type="submit" class="calc_button btn btn-primary" name="calc_form">Расчет</button>
-                            <!-- <button href="{% url 'poly:card' %}" class="reset_button btn btn-danger" value="Сброс">Сброс</button> -->
+                            <button type="submit" class="calc_button btn btn-primary"
+                                name="{{ form.prefix }}">Расчет</button>
                         </div>
                     </div>
                 </form>
             </div>
 
             <div class="card_img col">
-                картинка печать
+                картинка Штампы
             </div>
         </div>
-        <!-- Результат -->
     </div>
 </div>
 
@@ -62,10 +60,12 @@
 <div class="container">
     <div class="result_info p-3 border shadow">
         <div class="row px-3">
-            <div class="col col-xl-3">
+            <div class="col">
                 {% if result.id %}
-                <h3>Стоимость: {{ result.cost|default:"Сделайте расчет" }} руб.</h3>
-                <h5>Срочно: {{ result.express|yesno:"Да,Нет" }}</h5>
+                <h3>Стоимость будет указана в согласовании заказа.</h3>
+                {% if result.express == True %}
+                <h2 style="color: red;">Срочное изготовление (+500 руб.)</h2>
+                {% endif %}
                 <h5>Оснастка: {{ result.snap }}</h5>
                 <h5>Количество: {{ result.count }} штук.</h5>
             </div>
@@ -74,19 +74,60 @@
                 <p>При заказе сегодня до 15:00</p>
             </div>
 
-            <div class="pt-4">
-                <a class="confirm_button btn btn-success" href="confirm/{{ result.id }}"> заказать</a>
-            </div>
-            <div class="more_info">
-                <h6>Нажмите "заказать", что бы отправить нам заказ.</h6>
-            </div>
-            {% else %}
-            <h4>{{ result.cost }}</h4>
-            <h2 style="color: rgb(145, 1, 30);">Выбирете параметры и нажмите "Расчет".</h2>
+            <form class="form-control-lg border border-2" action="{% url 'stamp:confirm' %}" method="post"
+                enctype="multipart/form-data">
 
-            {% endif %}
+                <div class="row">
+                    {% csrf_token %}
+
+                    {{ confirm_form.id_stamp_obj }}
+
+                    <div class="pb-4">
+                        <p>Прикрепите файл: </p>{{ confirm_form.file }}
+                    </div>
+
+                    <div class="">
+                        <p>Текст для штампа и комментарий к заказу:</p>
+                        {{ confirm_form.comment }}
+                    </div>
+                </div>
+
+                <!-- Данные клиента -->
+                <br>
+                <div class="row py-3 mx-1 border border-primary border-2 rounded">
+                    <h3>Контактные данны:</h3>
+                    <div class="col">
+                        <p>Имя: </p>{{ confirm_form.name }}
+                    </div>
+                    <div class="col">
+                        <p>E-mail: </p>{{ confirm_form.email }}
+                    </div>
+                    <div class="col">
+                        <p>Телефон: </p>{{ confirm_form.tel }}
+                    </div>
+                </div>
+
+
+                <div class="row pt-4">
+                    <div class="col ">
+                        <button style="width: 200px;" type="submit" class="yes_button btn btn-primary"
+                            name="{{ confirm_form.prefix }}">заказать</button>
+                        <div class="more_info">
+                            <h6>Нажмите "заказать", что бы отправить нам заказ.</h6>
+                        </div>
+                        <!-- <button href="{% url 'poly:card' %}" class="reset_button btn btn-danger" value="Сброс">Сброс</button> -->
+                    </div>
+                </div>
+            </form>
+
         </div>
+        {% else %}
+        <h4>{{ result.cost }}</h4>
+        <h2 style="color: rgb(145, 1, 30);">Выбирете параметры и нажмите "Расчет".</h2>
+
+        {% endif %}
     </div>
+</div>
 
 </div>
 
@@ -103,7 +144,7 @@
                 tempora!</p>
         </div>
     </div>
-</div>
+</div>tipkor@mail.ru
 
 
 <br><br>
