--- a/tipkor/poly/templates/poly/confirm.html
+++ b/tipkor/poly/templates/poly/confirm.html
@@ -33,28 +33,49 @@
                     <p>При заказе сегодня до 15:00</p>
                 </div>
             </div>
+
             <div>
-                <form class="form-control-lg " action="{% url 'poly:confirm' order.id %}" method="post">
+                <form class="form-control-lg border border-2" action="{% url 'poly:confirm' order.id %}" method="post"
+                enctype="multipart/form-data">
+
+                <div class="row">
                     {% csrf_token %}
-                    <div class="row border">
-                        <div class="col border">{{ form.name }}<p>Имя</p>
-                        </div>tipkor@mail.ru
-                        <div class="col border">{{ form.email }}<p>почта</p>
-                        </div>
-                        <div class="col border">{{ form.tel }}<p>телефон</p>
-                        </div>
-                        <div class="col border">{{ form.file }}<p>макет</p>
-                        </div>
+                    <div class="pb-4">
+                        <p>Прикрепите файл: </p>{{ form.file }}
                     </div>
 
-
-                    <div class="row">
-                        <div class="col border">
-                            <button style="width: 200px;" type="submit" class="yes_button btn btn-primary" name="form">заказать</button>
-                            <!-- <button href="{% url 'poly:card' %}" class="reset_button btn btn-danger" value="Сброс">Сброс</button> -->
-                        </div>
+                    <div class="">
+                        <p>Kомментарий к заказу:</p>
+                        {{ form.comment }}
                     </div>
-                </form>
+                </div>
+
+                <!-- Данные клиента -->
+                <br>
+                <div class="row py-3 mx-1 border border-primary border-2 rounded">
+                    <h3>Контактные данные:</h3>
+                    <div class="col">
+                        <p>Имя: </p>{{ form.name }}
+                    </div>
+                    <div class="col">
+                        <p>E-mail: </p>{{ form.email }}
+                    </div>
+                    <div class="col">
+                        <p>Телефон: </p>{{ form.tel }}
+                    </div>
+                </div>
+
+
+                <div class="row pt-4">
+                    <div class="col ">
+                        <button style="width: 200px;" type="submit" class="yes_button btn btn-primary">заказать</button>
+                        <div class="more_info">
+                            <h6>Нажмите "заказать", что бы отправить нам заказ.</h6>
+                        </div>
+                        <!-- <button href="{% url 'poly:card' %}" class="reset_button btn btn-danger" value="Сброс">Сброс</button> -->
+                    </div>
+                </div>
+            </form>
 
             </div>
         </div>
