type_production throw hidden forms field

--- a/tipkor/poly/templates/poly/confirm.html
+++ b/tipkor/poly/templates/poly/confirm.html
@@ -40,6 +40,9 @@
 
                 <div class="row">
                     {% csrf_token %}
+                {{ form.type_production }}
+
+
                     <div class="pb-4">
                         <p>Прикрепите файл: </p>{{ form.file }}
                     </div>
