--- a/tipkor/wide/templates/wide/confirm.html
+++ b/tipkor/wide/templates/wide/confirm.html
@@ -34,22 +34,44 @@
             </div>
             <div>
                 <form class="form-control-lg " action="{% url 'wide:confirm' order.id %}" method="post">
-                    {% csrf_token %}
-                    <div class="row border">
-                        <div class="col border">{{ form.name }}<p>Имя</p>
-                        </div>tipkor@mail.ru
-                        <div class="col border">{{ form.email }}<p>почта</p>
+                    <div class="row">
+                        {% csrf_token %}
+                        {{ form.type_production }}
+
+
+                        <div class="pb-4">
+                            <p>Прикрепите файл: </p>{{ form.file }}
                         </div>
-                        <div class="col border">{{ form.tel }}<p>телефон</p>
+
+                        <div class="">
+                            <p>Kомментарий к заказу:</p>
+                            {{ form.comment }}
                         </div>
-                        <div class="col border">{{ form.file }}<p>макет</p>
+                    </div>
+
+                    <!-- Данные клиента -->
+                    <br>
+                    <div class="row py-3 mx-1 border border-primary border-2 rounded">
+                        <h3>Контактные данные:</h3>
+                        <div class="col">
+                            <p>Имя: </p>{{ form.name }}
+                        </div>
+                        <div class="col">
+                            <p>E-mail: </p>{{ form.email }}
+                        </div>
+                        <div class="col">
+                            <p>Телефон: </p>{{ form.tel }}
                         </div>
                     </div>
 
 
-                    <div class="row">
-                        <div class="col border">
-                            <button style="width: 200px;" type="submit" class="yes_button btn btn-primary" name="form">заказать</button>
+                    <div class="row pt-4">
+                        <div class="col ">
+                            <button style="width: 200px;" type="submit"
+                                class="yes_button btn btn-primary">заказать</button>
+                            <div class="more_info">
+                                <h6>Нажмите "заказать", что бы отправить нам заказ.</h6>
+                            </div>
                             <!-- <button href="{% url 'poly:card' %}" class="reset_button btn btn-danger" value="Сброс">Сброс</button> -->
                         </div>
                     </div>
