--- a/tipkor/stamp/static/stamp/css/stamp.css
+++ b/tipkor/stamp/static/stamp/css/stamp.css
@@ -1,13 +1,31 @@
 .title_text {
-    font-weight:800;
+    font-weight: 800;
 }
 
 
-.card_img {
-    background-color: rgb(210, 210, 210);
+.calc_img {
+    display: flex;
+    width: 100%;
+    height: 280px;
+    justify-content: center;
 }
 
-#id_paper, #id_format_p, #id_duplex, #id_pressrun, #id_post_obr  {
+input[type=radio] {
+    /* padding-left: 20px!important; */
+    width: 20px;
+    height: 20px;
+}
+
+
+#id_form-express {
+    /* padding-left: 0px!important; */
+    height: 20px;
+    width: 20px;
+}
+
+
+#id_form-snap,
+#id_form-count {
     height: 40px;
     width: 200px;
 }
@@ -22,19 +40,29 @@
     width: 200px;
 }
 
+#id_confirm_form-comment {
+    width: 50%;
+    height: 100px;
+    /* box-sizing: border-box; */
+}
 
 
 /* md срабатывает меньше 992 */
 @media screen and (max-width: 992px) {
-
+    .calc_img {
+        display: none;
+    }
 }
 
 /* sm срабатывает меньше 768 */
 @media screen and (max-width: 768px) {
+    .calc_img {
+        display: none;
+    }
 
     .card_form {
         flex-direction: row;
-    }        
+    }
 }
 
 /* xs срабатывает меньше 576px */
@@ -49,7 +77,13 @@
         flex-direction: row;
     }
 
-    .card_img {
-        display: none;        
+    .calc_img {
+        display: none;
+    }
+
+    #id_confirm_form-comment {
+        width: 100%;
+        height: 100px;
+        /* box-sizing: border-box; */
     }
 }
