--- a/tipkor/tipkor/templates/tipkor/expirement.html
+++ b/tipkor/tipkor/templates/tipkor/expirement.html
@@ -16,6 +16,7 @@
 	<script src="{% static 'tipkor/js/bootstrap.bundle.min.js' %}"></script>
 	<script src="{% static 'tipkor/js/bootstrap.min.js' %}"></script>
 	<script src="{% static 'tipkor/js/tipkor.js' %}"></script>
+	<script src="{% static 'tipkor/js/bootstrap.js' %}"></script>
 </head>
 
 
@@ -41,15 +42,15 @@
 	<div class="container pt-5">
 		<div class="row">
 			<div class="col border">
-				<a class="btn btn-primary w-100" data-bs-toggle="collapse" href="#collapseExample" role="button"
-					aria-expanded="false" aria-controls="collapseExample">
+				<a role="button" class="btn btn-primary w-100" data-bs-toggle="collapse" href="#collapseExample"
+					role="button" aria-expanded="false" aria-controls="collapseExample">
 					Ссылка с href
 				</a>
 			</div>
 
 			<div class="col border">
-				<a class="btn btn-primary w-100" data-bs-toggle="collapse" href="#collapseExample2" role="button"
-					aria-expanded="false" aria-controls="collapseExample2">
+				<a role="button" class="btn btn-primary w-100" data-bs-toggle="collapse" href="#collapseExample2"
+					role="button" aria-expanded="false" aria-controls="collapseExample2">
 					Ссылка с href
 				</a>
 			</div>
@@ -81,6 +82,25 @@
 
 
 
+	<div class="container">
+
+		<div class="col border">
+			<a role="button" data-bs-toggle="collapse" href="#collapseExample3" role="button" aria-expanded="false"
+				aria-controls="collapseExample3">
+				Что такое оснастка?
+			</a>
+		</div>
+
+		<div class="row">
+			<div class="col-12">
+				<div class="collapse" id="collapseExample3">
+					<div class="card card-body">
+						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, consequatur, rerum sed accusamus
+							iste tempore ea nulla recusandae enim natus cumque aliquam aspernatur illo ab itaque ut sunt
+							sapiente delectus.</p>
+					</div>
+				</div>
+			</div>
 
 
 
@@ -88,16 +108,13 @@
 
 
 
-
-
-
-	<!-- <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" 2
+			<!-- <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" 2
 				aria-expanded="false" aria-controls="collapseExample">
 				Кнопка с data-target
 			</button> -->
 
 
-	</div>
+		</div>
 	</div>
 
 
