continue worklist tacks

--- a/tipkor/tipkor/templates/tipkor/base.html
+++ b/tipkor/tipkor/templates/tipkor/base.html
@@ -11,9 +11,7 @@
 	<link rel="icon" href="{% static 'tipkor/img/favicon.ico' %}" type="image/x-icon">
 	<link rel="stylesheet" type="text/css" href="{% static 'tipkor/css/bootstrap.min.css' %}">
 	<link rel="stylesheet" type="text/css" href="{% static 'tipkor/css/tipkor.css' %}">
-	<script src="{% static 'tipkor/js/bootstrap.bundle.min.js' %}"></script>
-	<script src="{% static 'tipkor/js/bootstrap.min.js' %}"></script>
-	<script src="{% static 'tipkor/js/tipkor.js' %}"></script>
+
 </head>
 
 <body>
@@ -138,12 +136,15 @@
 
 				<li class="ms-3">
 					<a href="mailto:tipkor@mail.ru" target="_blank">
-					<img id="hi_mess" src="{% static '/tipkor/img/email.svg' %}" alt=""></a>
+						<img id="hi_mess" src="{% static '/tipkor/img/email.svg' %}" alt=""></a>
 				</li>
 
 			</ul>
 		</footer>
 	</div>
+	<script src="{% static 'tipkor/js/bootstrap.bundle.min.js' %}"></script>
+	<!-- <script src="{% static 'tipkor/js/bootstrap.min.js' %}"></script> -->
+	<script src="{% static 'tipkor/js/tipkor.js' %}"></script>
 </body>
 
 </html>
