--- a/tipkor/stamp/templates/stamp/r_stamp.html
+++ b/tipkor/stamp/templates/stamp/r_stamp.html
@@ -16,48 +16,48 @@
 
 
         <div class="container py-3">
-            <div class="row">
-                <a class="" data-bs-toggle="collapse" href="#collapseExample" aria-expanded="true"
-                    aria-controls="collapseExample">
-                    Какую оснастку выбрать?
-                </a>
-            </div>
-            <div class="row collapse border rounded shadow-sm justify-content-start" id="collapseExample">
+            <a class="" data-bs-toggle="collapse" href="#snap_items_collapse" aria-expanded="true"
+                aria-controls="snap_items_collapse"><h5>Какую оснастку выбрать?</h5>
+                
+            </a>
+            <div class="collapse" id="snap_items_collapse">
 
-                <div class="col">
-                    <div class="card-img-top text-center border-3 p-2">
-                        <img src="{% static '/tipkor/img/card.gif' %}" class="img-fluid" alt="..." height="100px"
-                            width="150px">
+                <div class="row d-flex justify-content-start my-3">
+
+                    <div class="card text-center mx-3" style="width: 16rem;">
+                        <h6 class="card-header">Обычная оснастка</h6>
+                        <img src="{% static '/tipkor/img/card.gif' %}" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Обычная оснастка</h5>
+                            <!-- <h5 class="card-title">Обычная оснастка</h5> -->
                             <p class="card-text">Оснастка пластиковая с крышкой, без подушки</p>
                         </div>
                     </div>
-                </div>
 
-                <div class="col">
-                    <div class="card-img-top text-center border-3 p-2">
-                        <img src="{% static '/tipkor/img/card.gif' %}" class="img-fluid" alt="..." height="100px"
-                            width="150px">
+                    <div class="card text-center mx-3" style="width: 16rem;">
+                        <h6 class="card-header">Автоматическая оснастка</h6>
+                        <img src="{% static '/tipkor/img/card.gif' %}" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Обычная оснастка</h5>
-                            <p class="card-text">Оснастка пластиковая с крышкой, без подушки</p>
+                            <!-- <h5 class="card-title">Обычная оснастка</h5> -->
+                            <p class="card-text">Оснастка с синей встроенной подушкой</p>
                         </div>
                     </div>
+
                 </div>
             </div>
+
+
+
         </div>
-
     </div>
 
     <!-- Форма -->
     <div class="container">
         <h1 class="title_textp pt-3">Штампы</h1>
 
-        <div class="card_form border shadow p-3 mt-4">
+        <div class="card_form border shadow rounded p-3 mt-4 ">
             <div class="row">
 
-                <div class="col-xl-6 col-lg-6 col-md-10 col-sm-12">
+                <div class="col-xl-6 col-lg-6 col-md-10 col-sm-12 ">
                     <form class="form-control-lg " action="{% url 'stamp:r_stamp' %}" method="post">
                         {% csrf_token %}
                         <div class="row">
@@ -94,7 +94,7 @@
     <div class="container">
         <div class="result_info p-3 shadow">
 
-            <div class="row py-3 mx-1 border border-primary border-2 rounded">
+            <div class="row py-3 mx-1 border border-bg-secondary border-2 rounded bg-light">
                 <div class="col">
                     {% if result.id %}
                     <h3>Стоимость будет указана в согласовании заказа.</h3>
